<resources>
    <string name="app_name">TCPC</string>
    <string name="logText">====================\nTCP Client测试工具\nBy liccsu@163.com\n====================\n\n</string>
    <string name="addressHint">地址:</string>
    <string name="portHint">端口:</string>
    <string name="connectSwitchOff">断开</string>
    <string name="connectSwitchOn">连接</string>
    <string name="messageHint">输入文本</string>
    <string name="sendButtonText">发送</string>
</resources>